# deep-learning-course-spring2026

./: pyproject.toml
project/: Projects.ipynb  Projects_improved_classification.ipynb
sessions/session_1/: Exercises_1.ipynb
