[project]
name = "deep-learning-course-sprint2026"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.12.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "torch",
    "torchvision",
    "pandas",
    "scikit-learn",
    "seaborn",
    "matminer>=0.10.1",
    "pandas-stubs~=2.3.3",
    "scipy-stubs~=1.17.1",
]

# --- Origin Configuration ---

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
